Version: V0.5B1 Date: Jan 15 2006 +++++++++++++++++++++++++++++++
+ changes due Version in Installer

Version: V0.5B2 Date: Sun Jan 15 20:09:22 2006 +++++++++++++++++++++++++++++++
+ remove all OCAF header and libs
+ remove all modules related to OCAF
+ implementing Mesh save and restore
+ implementing Points save and restore
+ Save/Open of compressed XML documents
+ Preference page for document
+ Setting of document compression level